<resources>
    <string name="appId">C3ShoppingMall</string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="exit_msg">是否现在退出？</string>
    <string name="delete_tips">是否确定删除？</string>
    <string name="notification_tips">通知权限未开启，是否去开启？</string>
    <string name="alert_title">提示</string>

    <string name="title_activity_main">MainActivity</string>
    <string-array name="pd_titles">
        <item>正在加载首页请稍后...</item>
        <item>正在分享请稍后...</item>
        <item>正在请求支付请稍后...</item>
        <item>正在加载图片数据请稍后...</item>
    </string-array>
    <string name="title_share_success">分享成功！</string>
    <string name="title_share_faild">分享失败！</string>
    <string name="title_share_cancel">用户取消分享！</string>
    <string name="title_pay_success">支付成功！</string>
    <string name="title_pay_faild">支付失败！</string>
    <string name="title_pay_cancel">用户取消支付！</string>
    <string name="toast_not_install_wx">请先安装微信客户端！</string>
    <string name="toast_not_support_wxapi">请确定微信客户端为最新版本！</string>
    <string name="image_chooser">选择图片</string>
    <string name="title_fresh"><u>刷新重试</u></string>
    <string name="title_go2Setting"><u>设置网络</u></string>
    <string name="title_nonetwork">无法连接到网络，请稍后再试</string>
    <string name="title_activity_messages">MessagesActivity</string>
    <string name="action_settings">Settings</string>
    <string-array name="section_format">
        <item>消息</item>
        <item>公告</item>
        <item>物流</item>
    </string-array>
    <string name="title_msg">消息中心</string>
    <string name="title_choice_all">全选</string>
    <string name="title_delete">删除</string>
    <string name="title_detail">详情</string>
    <string name="expressno_pre">运单编号：%1$s</string>
    <string name="title_empty">暂无记录～～</string>
    <string name="err_system_version">系统版本过低，不支持此操作！</string>
</resources>
