<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context="com.c3.jbz.activity.MessagesActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_one"
        android:background="@color/top_bg">

        <ImageButton
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:background="@drawable/selector_back"
            android:paddingBottom="2dp"
            android:paddingLeft="1dp"
            android:paddingRight="1dp"
            android:paddingTop="2dp"
            android:src="@mipmap/back"  android:layout_gravity="center_vertical"/>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/title_msg"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

    </FrameLayout>

    <android.support.design.widget.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:tabIndicatorColor="@android:color/holo_red_dark"
        app:tabIndicatorHeight="1dp" />

    <android.support.v4.view.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentTop="true"
        android:background="@color/split_lin" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal" android:gravity="center_vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <CheckBox
            android:id="@+id/cb_choice_all"
            style="@style/baseTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawablePadding="1dp"
            android:drawableTop="@drawable/selector_choice_all"
            android:gravity="center"
            android:text="@string/title_choice_all"
            android:textColor="@drawable/selector_text_choice_all"
            android:textSize="@dimen/msg_bottom_textsize" />

        <TextView
            android:id="@+id/tv_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="1dp"
            android:drawableTop="@drawable/selector_delete_msg"
            android:gravity="center"
            android:text="@string/title_delete"
            android:textColor="@drawable/selector_text_delete"
            android:textSize="@dimen/msg_bottom_textsize" />

        <View
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>
