<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context=".activity.MainActivity">

    <LinearLayout
        android:id="@+id/ll_header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_one"
        android:background="@color/top_bg"
        android:orientation="horizontal" android:gravity="center_vertical">

        <ImageButton
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:background="@drawable/selector_back"
            android:paddingBottom="2dp"
            android:paddingLeft="1dp"
            android:paddingRight="1dp"
            android:paddingTop="2dp"
            android:src="@mipmap/back" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <RelativeLayout
            android:id="@+id/rl_goto_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="0"
            android:visibility="invisible" android:layout_marginRight="8dp">

            <ImageView
                android:id="@+id/iv_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:paddingTop="3dp"
                android:src="@mipmap/message" />

            <ImageView
                android:id="@+id/iv_hadmsg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/iv_msg"
                android:layout_toRightOf="@id/iv_msg"
                android:src="@drawable/red_dot"
                android:visibility="invisible" />
        </RelativeLayout>

        <ImageButton
            android:id="@+id/iv_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:background="@drawable/selector_back"
            android:paddingBottom="2dp"
            android:paddingLeft="1dp"
            android:paddingRight="1dp"
            android:paddingTop="2dp"
            android:src="@mipmap/share"
            android:visibility="gone" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/pb_main"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="3dip"
        android:progressDrawable="@drawable/pg"
        android:visibility="gone" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <WebView
            android:id="@+id/wv_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical" />

        <LinearLayout
            android:id="@+id/ll_empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/nosign" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/title_nonetwork"
                android:textColor="@android:color/darker_gray"
                android:textSize="@dimen/textsize_three" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_fresh"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:autoLink="all"
                    android:text="@string/title_fresh"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_set"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autoLink="all"
                    android:text="@string/title_go2Setting"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>

</LinearLayout>
